--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.igniterealtime.smack:smack-android:4.1.8"
-    compile "org.igniterealtime.smack:smack-tcp:4.1.8"
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'org.igniterealtime.smack:smack-android:4.1.8'
+    compile 'org.igniterealtime.smack:smack-tcp:4.1.8'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.jakewharton.timber:timber:4.3.1'
     testCompile 'junit:junit:4.12'
 }
