--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,15 +20,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'org.igniterealtime.smack:smack-android:4.1.8'
     compile 'org.igniterealtime.smack:smack-tcp:4.1.8'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.jakewharton.timber:timber:4.3.1'
+    compile 'com.sdsmdg.tastytoast:tastytoast:0.1.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:24.2.1'
 }
