--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
           package="com.github.ggggxiaolong.xmpp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- 必选 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+    <!-- 可选 -->
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <application
         android:name=".App"
@@ -14,25 +21,34 @@
         <activity
             android:name=".splash.SplashActivity"
             android:theme="@style/SplashTheme">
-            <!--<intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>-->
-        </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".user.LoginActivity"/>
-
-        <service android:name=".service.XMPPService"/>
-
-        <activity android:name=".setting.SetServerActivity"
-            android:theme="@style/AppTheme.Translucent.Setting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".user.LoginActivity"/>
+
+        <activity
+            android:name=".setting.SetServerActivity"
+            android:theme="@style/AppTheme.Translucent.Setting"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
+
+        <service android:name=".service.XMPPService"/>
+
+        <service
+            android:name=".service.JobScheduleService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
+        <receiver android:name=".receiver.InternetReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+        <!-- BUGHD -->
+        <meta-data android:value="2acb9a7e52442ad91e4e0e4b3b9de010" android:name="BUG_HD_SDK_GENERAL_KEY" />
     </application>
 
 </manifest>
