--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'com.squareup.sqldelight'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
@@ -12,6 +14,12 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -36,4 +44,11 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'im.fir:fir-sdk:latest.integration@aar'
+
+    apt "org.immutables:value:2.3.2" // for annotation processor
+    provided "org.immutables:value:2.3.2" // for annotations
+    provided "org.immutables:builder:2.3.2" // for annotations
+    provided "org.immutables:gson:2.3.2" // for annotations
+
+    compile 'com.github.promeg:tinypinyin:1.0.0' // ~80KB
 }
