--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <!-- 必选 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -27,9 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".chat.MainActivity"/>
         <activity android:name=".user.LoginActivity"/>
-
         <activity
             android:name=".setting.SetServerActivity"
             android:theme="@style/AppTheme.Translucent.Setting"
@@ -37,7 +37,6 @@
         </activity>
 
         <service android:name=".service.XMPPService"/>
-
         <service
             android:name=".service.JobScheduleService"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
@@ -48,7 +47,15 @@
             </intent-filter>
         </receiver>
         <!-- BUGHD -->
-        <meta-data android:value="2acb9a7e52442ad91e4e0e4b3b9de010" android:name="BUG_HD_SDK_GENERAL_KEY" />
+        <meta-data
+            android:name="BUG_HD_SDK_GENERAL_KEY"
+            android:value="2acb9a7e52442ad91e4e0e4b3b9de010"/>
+
+        <activity
+            android:name=".chat.ChatActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
     </application>
 
 </manifest>
